# Turbobot-Autonomous-Robot

./: README.md
CAD Models/: Part11_White.STL  Part12.STL  Part2_White.STL  Part3.STL  Part7.STL  Part8.STL  Part9_White.STL
CAD Models/Solidworks Parts/: Battery_Enclosure_Base.SLDPRT  Battery_Enclosure_Cover.SLDPRT  DC Gearbox Motor SGD37.step.SLDPRT  MPU6050.SLDPRT  Part1.SLDPRT  Part2.SLDPRT  Part3.SLDPRT  Part4.SLDPRT  Xiaomi Roborock Mi LDS02RR 1st gen LiDAR.SLDPRT
STL_Files/: Part1.STL  Part10_White.STL  Part4.STL  Part5.STL
turbobot_bringup/: CMakeLists.txt  package.xml
turbobot_bringup/launch/: real_robot.launch.py  simulated_robot.launch.py
turbobot_bringup/rviz/: real_robot.rviz
turbobot_controller/: CMakeLists.txt  package.xml
turbobot_controller/config/: turbobot_controllers.yaml  twist_mux_joy.yaml
turbobot_controller/include/turbobot_controller/: twist_relay.hpp
turbobot_controller/launch/: controller.launch.py  joystick_teleop.launch.py
turbobot_controller/src/: cmd_vel_interpolator.cpp  twist_relay.cpp
turbobot_cpp_examples/: CMakeLists.txt  package.xml
turbobot_cpp_examples/src/: simple_publisher.cpp  simple_subscriber.cpp
turbobot_description/: CMakeLists.txt  package.xml
turbobot_description/config/: joint_names_Wheel_Assem.yaml
turbobot_description/launch/: display.launch.py  gazebo.launch.py
turbobot_description/meshes/: IMU_link.STL  base_link.STL  (+5 more)
turbobot_firmware/: CMakeLists.txt  package.xml  turbobot_interface.xml
turbobot_localization/: CMakeLists.txt  package.xml
turbobot_utils/: CMakeLists.txt  package.xml
(+17 files in other folders)
